--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
-[submodule "glfw"]
-	path = glfw
-	url = https://github.com/glfw/glfw.git
+[submodule "thirdparty/glad"]
+	path = thirdparty/glad
+	url = git@github.com:Dav1dde/glad.git
+[submodule "thirdparty/glfw"]
+	path = thirdparty/glfw
+	url = git@github.com:glfw/glfw.git
